--- a/static/src/output.css
+++ b/static/src/output.css
@@ -598,20 +598,16 @@ video {
   display: table;
 }
 
-.h-72 {
-  height: 18rem;
+.grid {
+  display: grid;
 }
 
-.w-1\/4 {
-  width: 25%;
+.h-96 {
+  height: 24rem;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .items-center {
