--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -6,29 +6,31 @@
 
 {% block content %}
 
-<div class="login">
+<div class="login container flex flex-col items-center mx-auto">
 
-    <h1>Login</h1>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
+    <h1 class="text-4xl font-bold py-8">Login</h1>
+    <div class="bg-green-500 rounded-lg drop-shadow-xl px-16 py-8 mb-8 w-1/3">
+        <form method="POST" action="">
+            {% csrf_token %}
+            <table class="table-fixed w-full">
+                <tr>
+                    <td class="px-4 text-white">Username: </td>
+                </tr>
+                <tr>
+                    <td class="py-2"><input type="text" name="username" placeholder="Username" class="form-control rounded-full p-2 border-2 w-full"></td>
+                </tr>
+                <tr>
+                    <td class="px-4 pt-6 text-white">Password: </td>
+                </tr>
+                <tr>
+                    <td class="py-2"><input type="password" name="password" placeholder="Password" class="form-control rounded-full p-2 border-2 w-full"></td>
+                </tr>            
+                <tr>
+                    <td class="pt-10 flex justify-end"><input class="btn login_btn bg-slate-100 hover:bg-gray-200 rounded-full px-4 py-2 cursor-pointer" type="submit" value="Login"></td>
+                </tr>
+            </table>
+        </form>
+    </div>
 
     {% if messages %}
         <ul>
@@ -38,7 +40,7 @@
         </ul>
     {% endif %}     
         
-    Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a>
+    <p class="text-center">Don't have an account yet?<br><a class="text-green-500 hover:text-green-700" href="{% url 'main:register' %}">Register Now</a></p>
 
 </div>
 
