--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,29 +6,80 @@
 
 {% block content %}  
 
-<div class = "login">
+<div class = "login container flex flex-col items-center mx-auto">
     
-    <h1>Register</h1>  
-
+    <h1 class="text-4xl font-bold text-slate-700 py-8">Register</h1>  
+    <div class="bg-white rounded-lg shadow-2xl px-8 pt-12 py-6 mb-8 w-1/3">
         <form method="POST" >  
             {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
+            <table class="table-fixed w-full">  
+                <tr>
+                    <td class="text-gray-700 font-medium">
+                        <label for="id_username">Username:</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="py-2">
+                      <input class="py-3 px-4 border-2 w-full focus:shadow-lg" type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus required id="id_username">
+                        <br>
+                        <span class="helptext text-xs">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="pt-6 text-gray-700 font-medium">
+                        <label for="id_password1">Password:</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td> 
+                        <input class="py-3 px-4 border-2 w-full focus:shadow-lg" type="password" name="password1" autocomplete="new-password" required id="id_password1">
+                        <br>
+                        <span class="helptext text-xs">
+                            <ul class="list-disc pl-6 pt-1">
+                                <li>Your password can't be too similar to your other personal information.</li>
+                                <li>Your password must contain at least 8 characters.</li>
+                                <li>Your password can't be a commonly used password.</li>
+                                <li>Your password can't be entirely numeric.</li>
+                            </ul>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="pt-6 text-gray-700 font-medium">
+                        <label for="id_password2">Password confirmation:</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input class="py-3 px-4 border-2 w-full focus:shadow-lg" type="password" name="password2" autocomplete="new-password" required id="id_password2">
+                        
+                        <br>
+                        <span class="helptext text-xs">Enter the same password as before, for verification.</span>
+                    </td>
                 </tr>  
+                <tr>  
+                    <td class="pt-10 pb-4 flex justify-center">
+                        <input class="btn login_btn bg-green-500 hover:bg-green-700 text-white font-medium rounded-full px-36 py-3 cursor-pointer" type="submit" name="submit" value="Register"/>
+                    </td>  
+                </tr>
+                {% if form.errors %}
+                <tr>
+                    <td>
+                        <ul class="pt-2">
+                            {% for _,error in form.errors.items %} 
+                            <li class="text-red-500 text-sm text-center">{{ error }}</li>
+                            {% endfor %}
+                            <li class="text-red-500 text-sm text-center">Please try again.</li>
+                        </ul>
+                    </td>
+                </tr>
+                {% endif %}
             </table>  
         </form>
+    </div>
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
+    <p class="text-center">Already have an account?<br><a class="text-green-500 hover:text-green-700" href="{% url 'main:login' %}">Login</a></p>
+        
 </div>  
 
 {% endblock content %}
