change width to max width

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -9,7 +9,7 @@
 <div class="login container flex flex-col items-center mx-auto">
 
     <h1 class="text-4xl font-bold text-slate-700 py-8">Login</h1>
-    <div class="bg-white rounded-lg shadow-2xl px-8 pt-12 py-6 mb-8 w-1/3">
+    <div class="bg-white rounded-lg shadow-2xl px-8 pt-12 py-6 mb-8 max-w-xl">
         <form method="POST" action="">
             {% csrf_token %}
             <table class="table-fixed w-full">
