--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
         {% block meta %}
         {% endblock meta %}
     </head>
+    {% block header %}
+    {% endblock header %}
     <body class="bg-green-50 font-montserrat">
         {% block content %}
         {% endblock content %}
