--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -4,12 +4,17 @@
     <title>Login</title>
 {% endblock meta %}
 
+{% block header %}
+<header class="py-8">
+    <p class="text-5xl text-green-500 text-center font-montserrat font-bold">SHOPPING LIST</p>
+</header>
+{% endblock header %}
+
 {% block content %}
 
 <div class="login container flex flex-col items-center mx-auto">
 
-    <h1 class="text-4xl font-bold text-slate-700 py-8">Login</h1>
-    <div class="bg-white rounded-lg shadow-2xl px-8 pt-12 py-6 mb-8 max-w-xl">
+    <div class="bg-white rounded-lg shadow-2xl px-8 pt-12 pb-6 mb-8 max-w-xl">
         <form method="POST" action="">
             {% csrf_token %}
             <table class="table-fixed w-full">
