--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -26,7 +26,7 @@
             </span>
         </h5>
         <h5 class="pt-4">Sesi terakhir login: {{ last_login }}</h5>
-        <h5 class="pt-4">User ID: {{iduser}}</h5>
+        <!-- <h5 class="pt-4">User ID: {{iduser}}</h5> -->
         <div class="grid-cols-3 grid gap-4 my-8">
             {% for product in products %}
             <div class="h-96 bg-white border-2 border-gray-200 rounded-lg p-6">
