--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,11 +2,17 @@
 
 {% block header %}
 <header>
-    <div class="bg-white header mb-8">
+    <div class="bg-white header md:mb-8 mb-4">
         <div class="container mx-auto flex justify-between items-center">
-            <p class="text-3xl text-green-500 font-montserrat font-bold py-8">SHOPPING LIST PAGE</p>
-            <a href="{% url 'main:create_product' %}">
-                <button class="font-montserrat bg-green-500 hover:bg-green-700 font-medium text-white rounded-full px-4 py-2">Add New Product</button>
+            <p class="text-xl md:text-3xl text-green-500 font-montserrat px-4 md:px-0 font-bold py-4 md:py-8">SHOPPING LIST PAGE</p>
+            <a class="flex px-4 md:px-0" href="{% url 'main:create_product' %}">
+                <button class="hidden md:block font-montserrat bg-green-500 hover:bg-green-700 font-medium text-white rounded-full px-4 py-2">Add New Product</button>
+                <div class="md:hidden flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m6-6H6" />
+                    </svg>
+                    <p>New</p>                  
+                </div>
             </a>
         </div>
     </div>
@@ -15,7 +21,7 @@
 
 {% block content %}
     <div class="container mx-auto">
-        <h5>
+        <h5 class="text-center md:text-left">
             {{name}} - {{class}}
             <span class="mx-4">
                 <a href="{% url 'main:logout' %}">
@@ -25,13 +31,23 @@
                 </a>
             </span>
         </h5>
-        <h5 class="pt-4">Sesi terakhir login: {{ last_login }}</h5>
+        <h5 class="text-center md:text-left pt-2 md:pt-4">Sesi terakhir login: {{ last_login }}</h5>
         <!-- <h5 class="pt-4">User ID: {{iduser}}</h5> -->
-        <div class="grid-cols-3 grid gap-4 my-8">
+        <div class="grid-cols-2 md:grid-cols-3 grid gap-4 my-8 px-2 md:px-0">
             {% for product in products %}
-            <div class="h-96 bg-white border-2 border-gray-200 rounded-lg p-6">
+            <div class="h-72 md:h-96 bg-white border-2 border-gray-200 rounded-lg p-6">
                 <p class="flex justify-between font-bold">{{product.name}}<span>Rp{{product.price}}</span></p>
                 <p class="pt-2">{{product.description}}</p>
+                <a class="text-white" href="{% url 'main:edit_product' product.pk %}">
+                    <button class="rounded-full px-4 py-2 bg-green-500 hover:bg-green-700">
+                        Edit
+                    </button>
+                </a>
+                <a class="text-white" href="{% url 'main:delete_product' product.pk %}">
+                    <button class="rounded-full px-4 py-2 bg-green-500 hover:bg-green-700">
+                        Delete
+                    </button>
+                </a>
             </div>
             <!-- <tr>
                 <td>{{product.name}}</td>
