--- a/templates/base.html
+++ b/templates/base.html
@@ -31,4 +31,6 @@
         {% block content %}
         {% endblock content %}
     </body>
+    {% block script %}
+    {% endblock script %}
 </html>
