--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td>  
-                    <input class="border-2" type="text" name="name" maxlengtd="255" required id="id_name">
+                    <input class="border-2" type="text" name="name" maxlength="255" required id="id_name">
                 </td>
             </tr>
             <tr>
