--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -5,15 +5,15 @@
     <div class="bg-white header md:mb-8 mb-4">
         <div class="container mx-auto flex justify-between items-center">
             <p class="text-xl md:text-3xl text-green-500 font-montserrat px-4 md:px-0 font-bold py-4 md:py-8">SHOPPING LIST PAGE</p>
-            <a class="flex px-4 md:px-0" href="{% url 'main:create_product' %}">
-                <button class="hidden md:block font-montserrat bg-green-500 hover:bg-green-700 font-medium text-white rounded-full px-4 py-2">Add New Product</button>
+            <div>
+                <button id="modal-button" class="hidden md:block font-montserrat bg-green-500 hover:bg-green-700 font-medium text-white rounded-full px-4 py-2">Add New Product</button>
                 <div class="md:hidden flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m6-6H6" />
                     </svg>
                     <p>New</p>                  
                 </div>
-            </a>
+            </div>
         </div>
     </div>
 </header>
@@ -33,32 +33,138 @@
         </h5>
         <h5 class="text-center md:text-left pt-2 md:pt-4">Sesi terakhir login: {{ last_login }}</h5>
         <!-- <h5 class="pt-4">User ID: {{iduser}}</h5> -->
-        <div class="grid-cols-2 md:grid-cols-3 grid gap-4 my-8 px-2 md:px-0">
-            {% for product in products %}
-            <div class="h-72 md:h-96 bg-white border-2 border-gray-200 rounded-lg p-6">
-                <p class="flex justify-between font-bold">{{product.name}}<span>Rp{{product.price}}</span></p>
-                <p class="pt-2">{{product.description}}</p>
-                <a class="text-white" href="{% url 'main:edit_product' product.pk %}">
+        <div id="product_display" class="grid-cols-2 md:grid-cols-3 grid gap-4 my-8 px-2 md:px-0">
+        </div>
+    
+    <br />
+    </div>
+    <div id="modal" class="hidden z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <!--
+          Background backdrop, show/hide based on modal state.
+      
+          Entering: "ease-out duration-300"
+            From: "opacity-0"
+            To: "opacity-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100"
+            To: "opacity-0"
+        -->
+        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+      
+        <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+          <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+            <!--
+              Modal panel, show/hide based on modal state.
+      
+              Entering: "ease-out duration-300"
+                From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                To: "opacity-100 translate-y-0 sm:scale-100"
+              Leaving: "ease-in duration-200"
+                From: "opacity-100 translate-y-0 sm:scale-100"
+                To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            -->
+            <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
+              <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+                <p class="text-xl font-bold pb-4">Add New Product</p>
+                <form id="form" method="POST">
+                    {% csrf_token %}
+                    <table class="table-fixed w-full">
+                        <tr>
+                            <td class="text-gray-700 font-medium text-sm md:text-base">
+                                <label for="id_name">Name:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>  
+                                <input class="border-2 text-sm md:text-base py-px px-px md:px-2" type="text" name="name" maxlength="255" required id="id_name">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="id_price">Price:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>  
+                                <input class="border-2 text-sm md:text-base py-px px-px md:px-2" type="number" name="price" required id="id_price">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="id_description">Description:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>  
+                                <textarea class="border-2 text-sm md:text-base py-1.5 px-px md:px-2 w-full" name="description" cols="40" rows="10" required id="id_description"></textarea>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+              </div>
+              <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+                <button id="confirm-modal" type="button" class="inline-flex w-full justify-center rounded-md bg-green-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-green-700 sm:ml-3 sm:w-auto">Add New Product</button>
+                <button id="cancel-modal" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 sm:mt-0 sm:w-auto">Cancel</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+{% endblock content %}
+{% block script %}
+    <script>
+        function openModal() {
+            const modal = document.getElementById("modal")
+            modal.style.display = 'block'
+        }
+
+        function closeModal() {
+            const modal = document.getElementById("modal")
+            modal.style.display = 'none'
+        }
+
+        document.getElementById("modal-button").addEventListener('click', openModal)
+        document.getElementById("confirm-modal").addEventListener('click', addProduct)
+        document.getElementById("cancel-modal").addEventListener('click', closeModal)
+        async function getProducts() {
+            return fetch("{% url 'main:get_product_json' %}").then((res)=>res.json())
+        }
+
+        async function refreshProducts() {
+            document.getElementById("product_display").innerHTML = ""
+            const product = await getProducts()
+            let htmlString = ``
+            product.forEach((item) => {
+                htmlString += `\n<div class="h-72 md:h-96 bg-white border-2 border-gray-200 rounded-lg p-6">
+                <p class="flex justify-between font-bold">${item.fields.name}<span>Rp${item.fields.price}</span></p>
+                <p class="pt-2">${item.fields.description}</p>
+                <a class="text-white" href="/edit_product/${item.fields.pk}">
                     <button class="rounded-full px-4 py-2 bg-green-500 hover:bg-green-700">
                         Edit
                     </button>
                 </a>
-                <a class="text-white" href="{% url 'main:delete_product' product.pk %}">
+                <a class="text-white" href="/delete_product/${item.fields.pk}">
                     <button class="rounded-full px-4 py-2 bg-green-500 hover:bg-green-700">
                         Delete
                     </button>
                 </a>
-            </div>
-            <!-- <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.price}}</td>
-                <td>{{product.description}}</td>
-                <td>{{product.date_added}}</td>
-            </tr> -->
-            {% endfor %}
-        </ul>
-    
-    <br />
-    </div>
-    
-    {% endblock content %}
+            </div>`
+            })
+
+            document.getElementById("product_display").innerHTML = htmlString
+        }
+
+        function addProduct() {
+            fetch("{% url 'main:add_product_ajax' %}", {
+                method: "POST",
+                body: new FormData(document.querySelector('#form'))
+            }).then(refreshProducts)
+
+            document.getElementById("form").reset()
+            closeModal()
+            return false
+        }
+
+        refreshProducts()
+    </script>
+    {% endblock script %}
