--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -143,7 +143,7 @@
                         Edit
                     </button>
                 </a>
-                <a class="text-white" href="/delete_product/${item.fields.pk}">
+                <a class="text-white" href="/delete/${item.pk}">
                     <button class="rounded-full px-4 py-2 bg-green-500 hover:bg-green-700">
                         Delete
                     </button>
