minor change to re push

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -31,7 +31,7 @@
                 </a>
             </span>
         </h5>
-        <h5 class="text-center md:text-left pt-2 md:pt-4">Sesi terakhir login: {{ last_login }}</h5>
+        <h5 class="text-center md:text-left pt-2 md:pt-4">Terakhir login: {{ last_login }}</h5>
         <!-- <h5 class="pt-4">User ID: {{iduser}}</h5> -->
         <div id="product_display" class="grid-cols-2 md:grid-cols-3 grid gap-4 my-8 px-2 md:px-0">
         </div>
